Fix responsiveness on mobile landscape

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  height: 100%;
   padding: 20px 40px;
-  overflow: hidden;
 }
 
 .description,
@@ -75,8 +74,14 @@
 }
 
 @media screen and (max-width: 680px) {
+  .content {
+    grid-template-rows: 0.3fr 0.5fr 1fr; 
+    margin-top: 0px;
+  }
+
   .main-banner {
-    width: 500px;
+    justify-self: center;
+    max-width: 300px;
   }
 
   .content {
@@ -89,7 +94,7 @@
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 500px) {
   .description {
     display: none;
   }
@@ -119,7 +124,7 @@
   }
 
   .content {
-    margin-top: 5px;
+    margin-top: -80px;
   }
 }
 
@@ -141,7 +146,13 @@
 @media screen and (max-height: 860px) {
   .content {
     margin-top: 10px;
-    height: 80vh;
+    height: 70%;
+  }
+}
+
+@media screen and (max-height: 700px), screen and (max-width: 700px) {
+  .content {
+    margin-top: 50px;
   }
 }
 
@@ -151,7 +162,6 @@
   }
 
   .main-banner {
-    width: 300px;
     height: fit-content;
     display: flex;
     justify-content: center;
