--- a/src/components/LandingNav/LandingNav.module.css
+++ b/src/components/LandingNav/LandingNav.module.css
@@ -92,7 +92,7 @@ img {
   }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 650px) {
   .bottom-nav {
     width: 300px;
   }
@@ -127,8 +127,14 @@ img {
   }
 }
 
-@media screen and (max-height: 860px) {
+@media screen and (max-height: 700px) {
   .right-nav {
     display: none;
+  }
+}
+
+@media screen and (max-height: 700px), screen and (max-width: 700px) {
+  .bottom-nav .button-container {
+    gap: 3px;
   }
 }
